# SimpleVQA

./: README.md
find_object_2d/cmake/: find_object_2d-msg-extras.cmake  find_object_2dConfig.cmake
find_object_2d/msg/: position.msg
pocketsphinx/: package.xml
pocketsphinx/cmake/: pocketsphinx-msg-extras.cmake  pocketsphinx-msg-paths.cmake  pocketsphinxConfig.cmake
pocketsphinx/demo/: robot.corpus  robot.dic  robot.launch  robot.lm  robot.log_pronounce  robot.sent  robot.vocab
pocketsphinx/nodes/: project0.py  robot_recog.py  vqa.py
pocketsphinx/srv/: stt.srv  tc.srv
qsr/qsr_lib/cmake/: qsr_lib-msg-extras.cmake  qsr_lib-msg-paths.cmake  qsr_libConfig.cmake
qsr/qsr_lib/srv/: RequestObj.srv  stt.srv
qsr/qsr_prob_rep/cmake/: qsr_prob_rep-msg-extras.cmake  qsr_prob_rep-msg-paths.cmake  qsr_prob_repConfig.cmake
